# simple-byok-translator

./: AGENTS.md  QUICKSTART.md  README.md  TODO.md
.agents/skills/implementation-prep/: SKILL.md
.agents/skills/post-implementation/: SKILL.md
.github/workflows/: docs-ci.yml
_docs/: documentation_guide.md
_docs/standards/: documentation_guidelines.md  documentation_operations.md  jj_workflow.md  quality_assurance.md
_evals/agent-workflows/: README.md  expected-invariants.md
backend/: .env.example  .gitignore  README.md  byok-translator.spec  pyproject.toml
backend/app/: __init__.py  __main__.py  config_store.py  errors.py  main.py  resources.py  schemas.py  secret_source.py  settings.py
backend/app/harness/: __init__.py  builder.py  models.py
backend/app/providers/: __init__.py  base.py  openrouter.py
backend/app/translation/: __init__.py  engine.py
backend/config/: defaults.yaml
backend/tests/: conftest.py  test_api.py  test_config_store.py  test_engine.py  test_harness_builder.py
frontend/: index.html
scripts/: check-docs.sh  test-validators.mjs  validate-doc-links.mjs  validate-frontmatter.mjs  validate-qa.mjs
worker/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.jsonc
worker/scripts/: hash-password.mjs
worker/src/: app.ts  auth.ts  config.ts  credentials.ts  engine.ts  errors.ts  harness.ts  index.ts  provider.ts  schemas.ts  types.ts
worker/test/: api.test.ts  auth.test.ts  config.test.ts  credentials.test.ts  e2e.test.ts  engine.test.ts  harness.test.ts  helpers.ts
(+32 files in other folders)
